fixed collapsing issues and added borders to the first element

--- a/src/sass/components/_drop-down.scss
+++ b/src/sass/components/_drop-down.scss
@@ -12,12 +12,18 @@
     border-radius: vars.$border-radius;
 
     .options {
+        background-color: inherit;
+        border-radius: inherit;
+        position: absolute;
+        top: 3rem;
         list-style: none;
-        display: none;
+        opacity: 0;
         margin: 0;
         padding: 0;
+        width: inherit;
+        height: fit-content;
         &.active {
-            display: inherit;
+            opacity: 1;
             flex-direction: column;
         }
 
@@ -29,6 +35,10 @@
                 background-color: rgba($color: #333, $alpha: 0.1);
             }
 
+            &:first-child {
+                border-top-right-radius: vars.$border-radius;
+                border-top-left-radius: vars.$border-radius;
+            }
             &:last-child {
                 border-bottom-right-radius: vars.$border-radius;
                 border-bottom-left-radius: vars.$border-radius;
